# ida-effort-prediction

./: .gitignore  README.md  pyproject.toml
docs/: core-library.md  data-and-results.md  overview.md  scripts.md  tests.md  workflow.md
effortpred/: cdp.py  conditional.py  count.py  distribution.py  features.py  heuristic.py  kre.py  metrics.py  models.py  pancake.py  pancake_count.py  pancake_features.py  pancake_tree.py  probe_features.py  puzzle.py  tree_size.py
results/: cost_ledger.csv  eval_table.csv  extrapolation_test.csv  extrapolation_tiers.csv  learning_curve.csv  learning_curve10.csv  mlp_importance_gap.csv  mlp_importance_rand.csv  pancake_eval_gap.csv  pancake_eval_gap_by_offset.csv  pancake_eval_gap_minimal.csv  pancake_eval_gap_minimal_by_offset.csv  pancake_eval_gap_n10.csv  pancake_eval_gap_n10_by_offset.csv  pancake_eval_gap_n10_minimal.csv  pancake_eval_gap_n10_minimal_by_offset.csv  pancake_eval_rand.csv  pancake_eval_rand_by_offset.csv  pancake_eval_rand_minimal.csv  pancake_eval_rand_minimal_by_offset.csv  pancake_eval_rand_n10.csv  pancake_eval_rand_n10_by_offset.csv  pancake_eval_rand_n10_minimal.csv  pancake_eval_rand_n10_minimal_by_offset.csv  prediction_latency.csv  probe_eval.csv  probe_no_fertile.csv  robustness_seeds.csv  robustness_seeds10.csv  tail_errors.csv  tiles_generalization_eval.csv
scripts/: calibrate.py  calibrate_pancake.py  cost_ledger.py  estimate_distribution.py  extrapolation_test.py  extrapolation_tiers.py  gbm_grouped_check.py  generate_data.py  generate_pancake.py  generate_tiles_uniform.py  kre_sanity.py  (+10 more)
(+17 files in other folders)
