[project]
name = "effortpred"
version = "0.1.0"
description = "Predicting IDA* search effort on the 15-puzzle: learned regressor vs the KRE formula"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["effortpred"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
